# cat

./: .gitignore  CMakeLists.txt
include/core/: files.h  theme.h
include/editor/: editor.h  tab.h  text.h
include/ui/: main.h  tree.h
src/: main.cpp
src/core/: files.cpp  theme.cpp
src/editor/: editor.cpp  tab.cpp  text.cpp
src/ui/: main.cpp  tree.cpp
